# blogregator

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: blog-monitor.yml  build-image.yml
backend/: pyproject.toml
backend/app/: blog.py  cli.py  database.py  dependencies.py  emails.py  llm.py  main.py  models.py  parser.py  post.py  prompts.py  rate_limit.py
backend/app/routers/: admin.py  auth.py  blog.py  users.py
backend/sql/: schema.sql
scripts/: backfill_posts.py  build.sh  smtp_debug.py  start.sh
sql/: schema.sql
src/blogregator/: alerts.py  blog.py  cli.py  config.py  core.py  database.py  emails.py  llm.py  parser.py  post.py  prompts.py  scheduler.py  server.py  utils.py
