[project]
name = "blogregator"
version = "0.1.0"
description = "Blogregator is a tool for automatically scraping blogs, extracting metadata from posts, and updating you when a new post drops."
readme = "README.md"
authors = [
    { name = "Aman Choudhri", email = "amanchoudhri@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "argon2-cffi>=25.1.0",
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.116.1",
    "litellm>=1.69.2",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic>=2.11.4",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "typer>=0.15.3",
]

[project.scripts]
blogregator = "blogregator.cli:app"
